Sort of working posts

--- a/content/index.html
+++ b/content/index.html
@@ -1,11 +1,8 @@
-{# Use base.j2 template as a base and only provide values for placeholders
-   in this file.
-#}
 {% extends "splash.j2" %}
 
 {# Markdown main content block. #}
 {% block text %}
 My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've [written](blog.html), my [projects](projects.html), what I've been up to, or learn more [about me](about.html).
 
-If you need to reach me, send me an <LINK HERE>email
+If you need to reach me, send me an [email](mailto:dan@dancarroll.org).
 {% endblock %}
