--- a/deploy/advanced/grouper.html
+++ b/deploy/advanced/grouper.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -55,6 +55,10 @@ Walking all groups and subgroups
     (first-steps.html)
   * [Index](/index.html) \
     (index.html)
+  * [Index](/blog/index.html) \
+    (index.html)
+  * [Live tiles without cellular data](/blog/2012/02/live-tiles-without-cellular-data.html) \
+    (live-tiles-without-cellular-data.html)
 
 *Advanced*
 
@@ -84,11 +88,6 @@ Listing only the specific (sub)group
 
 
 
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
