--- a/deploy/about.html
+++ b/deploy/about.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -59,11 +59,6 @@ The [photo][4] used for part of the background.
 [3]: https://github.com/merlinrebrovic/hyde-starter-kit
 [4]: http://www.flickr.com/photos/batintherain/5613841957/
 
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
