--- a/deploy/advanced/overview.html
+++ b/deploy/advanced/overview.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -37,6 +37,8 @@
 ====================
 
 If you have read and understood all basic topics covered in
+[Live tiles without cellular data](/blog/2012/02/live-tiles-without-cellular-data.html) 
+[Index](/blog/index.html) 
 [Index](/index.html) 
 [First steps](/first-steps.html) 
 [About](/about.html) 
@@ -77,11 +79,6 @@ tag
 
 
 
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
