--- a/deploy/advanced/sorter.html
+++ b/deploy/advanced/sorter.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -50,6 +50,10 @@ You can list and sort by name all your content files.
     (grouper.html)
   * [Index](/index.html) \
     (index.html)
+  * [Index](/blog/index.html) \
+    (index.html)
+  * [Live tiles without cellular data](/blog/2012/02/live-tiles-without-cellular-data.html) \
+    (live-tiles-without-cellular-data.html)
   * [Overview](/advanced/overview.html) \
     (overview.html)
   * [Sorter](/advanced/sorter.html) \
@@ -76,19 +80,18 @@ Or sort files by type and then by size.
   * [HTML] tagger.html
   * [HTML] grouper.html
   * [HTML] sorter.html
+  * [HTML] live-tiles-without-cellular-data.html
+  * [HTML] index.html
   * [HTML] first-steps.html
   * [JPG] background.jpg
   * [SWP] .index.html.swp
+  * [SWP] .live-tiles-without-cellular-data.html.swp
   * [YAML] meta.yaml
   * [YAML] meta.yaml
+  * [YAML] meta.yaml
 
 
 
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
