--- a/deploy/advanced/tagger.html
+++ b/deploy/advanced/tagger.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -56,6 +56,13 @@ Listing by tags
   * [Tagger](/advanced/tagger.html) \
     (tagger.html)
 
+*group*
+
+  * [Grouper](/advanced/grouper.html) \
+    (grouper.html)
+  * [Overview](/advanced/overview.html) \
+    (overview.html)
+
 *tag*
 
   * [Overview](/advanced/overview.html) \
@@ -63,12 +70,15 @@ Listing by tags
   * [Tagger](/advanced/tagger.html) \
     (tagger.html)
 
-*group*
+*coding*
 
-  * [Grouper](/advanced/grouper.html) \
-    (grouper.html)
-  * [Overview](/advanced/overview.html) \
-    (overview.html)
+  * [Live tiles without cellular data](/blog/2012/02/live-tiles-without-cellular-data.html) \
+    (live-tiles-without-cellular-data.html)
+
+*windowsphone*
+
+  * [Live tiles without cellular data](/blog/2012/02/live-tiles-without-cellular-data.html) \
+    (live-tiles-without-cellular-data.html)
 
 
 
@@ -82,11 +92,6 @@ will be returned.
 
 
 
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
