--- a/deploy/first-steps.html
+++ b/deploy/first-steps.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -104,11 +104,6 @@ are files needed for the [advanced topics](advanced/overview.html) so
 just ignore them at the beginning.  They will start to make sense while
 you're working through the template or will be explicitly explained when
 the right time comes.
-<h2>OLD</h2>
-                        <div class="landing">
-                <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-                <p>If you need to reach me, send me an <a href="">email</a>.</p>
-            </div>
         </div>
 
         <div class="footer">
