--- a/deploy/index.html
+++ b/deploy/index.html
@@ -23,7 +23,7 @@
             </header>
             
             <nav>
-                <a href="blog.html">blog</a>
+                <a href="/blog/">blog</a>
                 <a href="/projects/">projects</a>
                 <a href="/about/">about</a>
                 <a href="/feeds/latest/">feed</a>
@@ -35,7 +35,7 @@
         <div id="content">
             <div class="landing">
 <p>My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've <a href="blog.html">written</a>, my <a href="projects.html">projects</a>, what I've been up to, or learn more <a href="about.html">about me</a>.</p>
-<p>If you need to reach me, send me an <LINK HERE>email</p></div>
+<p>If you need to reach me, send me an <a href="mailto:dan@dancarroll.org">email</a>.</p></div>
         </div>
 
         <div class="footer">
