Add support for timeago JS

--- a/deploy/advanced/sorter.html
+++ b/deploy/advanced/sorter.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/media/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <meta name="description" content="Personal blog of Dan Carroll, a developer based in Cambridge. Topics include C#, Python, Django, and gaming." />
 
+    
     <!-- Google analytics code -->
     </head>
 <body>
@@ -84,8 +85,10 @@ Or sort files by type and then by size.
   * [HTML] index.html
   * [HTML] first-steps.html
   * [JPG] background.jpg
+  * [JS] dc.js
+  * [JS] jquery.timeago.js
+  * [JS] jquery.min.js
   * [SWP] .index.html.swp
-  * [SWP] .live-tiles-without-cellular-data.html.swp
   * [YAML] meta.yaml
   * [YAML] meta.yaml
   * [YAML] meta.yaml
