Add about page, fix some title issues

--- a/content/about.html
+++ b/content/about.html
@@ -1,34 +1,35 @@
 ---
-extends: base.j2
-title_ending: "| About"
-default_block: content
+extends: flatpage.j2
+title: About
+default_block: text
 ---
 
-About
-=====
+**Name:** Dan Carroll  
+**Email:** dan -AT- dancarroll.org  
+**Location:** Cambridge, MA  
 
-This beginner's tutorial was created by [Merlin Rebrović][0] for the
-[Hyde project][1]. It is included in Hyde as a layout named _starter_.
-If you have a [default Hyde installation][2], all you have to do is
-write:
+Where else you can find me
+--------------------------
+[Twitter](http://twitter.com/erunama)  
+[Google Profile](http://www.google.com/profiles/dancarroll)  
+[LinkedIn](http://www.linkedin.com/pub/daniel-carroll/1a/370/b17)  
+[Bitbucket](https://bitbucket.org/dancarroll)  
+[GitHub](https://github.com/dancarroll)  
 
-    hyde -s folder_name create -l starter
+What I do
+---------
+I am currently working for Microsoft as a software development engineer in test on the Outlook team. A long title, yes, but it's essentially a fusion of programmer and tester. My responsibilities include testing the product and developing tools and automated test suites. Specifically, I work on the [Outlook platform][0], which allows external developers and businesses to develop add-ins and customize Outlook for their specific needs.
 
-To check for the newest version, to download it separately or to report
-a bug, please visit Hyde Starter Kit's [GitHub page][3].
-
-
-Attributions
+My interests
 ------------
+In my free time, which this blog will primarily concern, I have a number of hobbies and engage in a number of activities.
 
-The [photo][4] used for part of the background.
+On the technical side, my primary programming expertise is in C# and the .NET framework. This website serves as my first foray into Python, using the [Django web development framework][1]. It also has given me a chance to dive much deeper into XHTML and CSS. Web development is a nice change of pace from what I do at work, and it is an area I hope to continue to explore in the future.
+
+Outside of technology, I am a casual golfer and squash player. In the past I was an avid runner, completing a half-marathon in 2005. I enjoy gaming and spend a fair amount of time on my Xbox 360 (my Gamertag is [erunama][2]). My favorite 360 games are Mass Effect and Fallout 3. I am a licensed amateur radio operator under the call sign is KE7UTD, though I have not taken advantage of the license yet. My favorite brewery is [Allagash][3].
 
 
-{# You can use Jinja tags in Markdown content also; they get processed
-   before the content gets to the Markdown filter.
-#}
-[0]: {{ author.url }}
-[1]: {{ project.url }}
-[2]: {{ project.install }}
-[3]: {{ layout.url }}
-[4]: http://www.flickr.com/photos/batintherain/5613841957/
+[0]: http://msdn.microsoft.com/en-us/library/bb177050.aspx
+[1]: http://www.djangoproject.com/
+[2]: http://live.xbox.com/profile/profile.aspx?pp=0&GamerTag=erunama
+[3]: http://www.allagash.com/
