Favicon in root, add title to splash page

--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,10 @@
-{% extends "splash.j2" %}
+---
+extends: splash.j2
+title: Home
+default_block: text
+---
 
-{# Markdown main content block. #}
-{% block text %}
 My name is Dan. I'm a programmer based in Redmond, Washington. Take a look at what I've [written](blog.html), my [projects](projects.html), what I've been up to, or learn more [about me](about.html).
 
 If you need to reach me, send me an [email](mailto:dan@dancarroll.org).
-{% endblock %}
+
