--- a/content/about.html
+++ b/content/about.html
@@ -6,7 +6,7 @@ default_block: text
 
 **Name:** Dan Carroll  
 **Email:** dan -AT- dancarroll.org  
-**Location:** Cambridge, MA  
+**Location:** Newton, MA  
 
 Where else you can find me
 --------------------------
