--- a/content/about.html
+++ b/content/about.html
@@ -5,7 +5,7 @@ default_block: text
 ---
 
 **Name:** Dan Carroll  
-**Email:** dan -AT- dancarroll.org  
+**Email:** dan&#64;dancarroll&#46;org  
 **Location:** Newton, MA  
 
 Where else you can find me
@@ -18,13 +18,13 @@ Where else you can find me
 
 What I do
 ---------
-I am currently working for Microsoft as a software development engineer in test on the Outlook team. A long title, yes, but it's essentially a fusion of programmer and tester. My responsibilities include testing the product and developing tools and automated test suites. Specifically, I work on the [Outlook platform][0], which allows external developers and businesses to develop add-ins and customize Outlook for their specific needs.
+I am currently working for Microsoft as a software development engineer in the [Office][4] organization. A long title, yes, but it's essentially a fusion of programmer and tester. My responsibilities include testing the product and developing tools and automated test suites. Over the years, I have worked on the [Outlook platform][0], which allows external developers and businesses to develop add-ins and customize Outlook for their specific needs, [SharePoint][5], and [SkyDrive Pro][6].
 
 My interests
 ------------
 In my free time, which this blog will primarily concern, I have a number of hobbies and engage in a number of activities.
 
-On the technical side, my primary programming expertise is in C# and the .NET framework. This website serves as my first foray into Python, using the [Django web development framework][1]. It also has given me a chance to dive much deeper into XHTML and CSS. Web development is a nice change of pace from what I do at work, and it is an area I hope to continue to explore in the future.
+On the technical side, my primary programming expertise is in C# and the .NET framework. This website serves as a chance to experiment with Python, using the [Django web development framework][1] and [Hyde][7] over the years. It also has given me a chance to dive much deeper into XHTML and CSS. Web development is a nice change of pace from what I do at work, and it is an area I hope to continue to explore in the future.
 
 Outside of technology, I am a casual golfer and squash player. In the past I was an avid runner, completing a half-marathon in 2005. I enjoy gaming and spend a fair amount of time on my Xbox 360 (my Gamertag is [erunama][2]). My favorite 360 games are Mass Effect and Fallout 3. I am a licensed amateur radio operator under the call sign is KE7UTD, though I have not taken advantage of the license yet. My favorite brewery is [Allagash][3].
 
@@ -33,3 +33,7 @@ Outside of technology, I am a casual golfer and squash player. In the past I was
 [1]: http://www.djangoproject.com/
 [2]: http://live.xbox.com/profile/profile.aspx?pp=0&GamerTag=erunama
 [3]: http://www.allagash.com/
+[4]: http://office.microsoft.com/
+[5]: http://en.wikipedia.org/wiki/Microsoft_SharePoint
+[6]: http://office.microsoft.com/en-us/sharepoint-server-help/what-is-skydrive-pro-HA102822076.aspx
+[7]: https://github.com/hyde/hyde
