Add additional projects to project list

--- a/content/projects.html
+++ b/content/projects.html
@@ -6,12 +6,23 @@ default_block: text
 
 I currently have my open source projects [hosted on Bitbucket][0] (with some [GitHub mirrors][1]).
 
-[dancarrollorg][2] : This site's code. Written in Python using the Django web framework
+[dancarrollorg_hyde][4]: This site's code. Written in Python using [Hyde][2].
 
-[FlashCards][3] : A flash card application, mainly used as a reason to experiment with WPF
+[dancarrollorg][5] : Old version of this site, written in Python using the [Django web framework][3]
+
+[django-activitysync][6]: Social activity aggregator for Django projects
+
+[sitemap-diff][7]: Very simple C# console app for diffing two sitemaps
+
+[FlashCards][8]: A flash card application, mainly used as a reason to experiment with WPF
 
 
 [0]: http://bitbucket.org/dancarroll
 [1]: http://github.com/dancarroll
-[2]: http://bitbucket.org/dancarroll/dancarrollorg
-[3]: http://bitbucket.org/dancarroll/flashcards
+[2]: https://github.com/hyde/hyde 
+[3]: https://www.djangoproject.com/
+[4]: https://bitbucket.org/dancarroll/dancarrollorg_hyde
+[5]: http://bitbucket.org/dancarroll/dancarrollorg
+[6]: https://bitbucket.org/dancarroll/django-activitysync
+[7]: https://bitbucket.org/dancarroll/sitemap-diff
+[8]: http://bitbucket.org/dancarroll/flashcards
